--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
 
     <nav class="position-fixed">
+        <span class="toggler"><i class="bi bi-card-text"></i></span>
         <div class="container d-flex justify-content-between">
             <div class="title">
                 <a href="#">Fitnesso</a>
             </div>
             <div class="assets d-flex position-relative">
-                <span class="toggler"><i class="bi bi-card-text"></i></span>
                 <div class="nav-list">
-                    <ul class="navigation active">
+                    <ul class="navigation">
                         <li>About</li>
                         <li>Free Workouts</li>
                         <li>Shop</li>
